--- a/style/main.css
+++ b/style/main.css
@@ -1,376 +1,39 @@
 @charset "utf-8";
 
-:root {
-  --clear: #0F2066;
-  --gray: #282c2f;
-}
-
 *{
 	box-sizing: border-box;
 	--bs-gutter-x: 0rem !important;
+	font-family: Anton;
 }
 
 body{
-	background-color: var(--clear);
-	font-family: Garamond;
-	color: white;
+    background-color: #212121;
+    color: white;
 }
 
-.nav-left{
-  position: fixed;
-  padding: 0px;
-  top: 20%;
-  left: -1px;
-  z-index: 102;
-  width: 50px;
-  height: 50px;
+nav{
+    background-color: #121212;
+    padding: 20px;
+    margin: 0px;
 }
 
-.nav-left-item{
-  background: radial-gradient(rgba(6,58,146,1) 0%, rgba(24,118,195,1) 50%, rgba(9,190,232,1) 100%);
-  box-shadow: 0 0 10px #000000;
-  border: 1px solid white;
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  padding: 25%;
-  position: absolute;
-  margin-top: 50px;
-  color: white;
+#navbar-pc{
+    padding: 10px 20px 20px 20px;
 }
 
-.nav-left-item:hover{
-  background: radial-gradient(rgba(181,18,16,1) 0%, rgba(191,80,54,1) 50%, rgba(239,186,31,1) 100%);
+nav .nav-text,
+nav .nav-text-orange{
+    display: inline;
 }
 
-.image{
-  position: relative;
-  top: 5vh;
+nav .nav-text-orange{
+    color: black;
+    background-color: orange;
+    padding: 8px;
+    border-radius: 14px;
 }
 
-.card-frame{
-  position: relative;
-  width: 110%;
-  margin-left: -20%;
-  top: -85vh;
-}
-
-.card-content{
-  position: relative;
-  width: 110%;
-  margin-left: -20%;
-}
-
-.card-text{
-  position: absolute;
-  top: 42%;
-  width: 100%;
-  margin-left: -15%;
-  text-align: center;
-}
-
-.card-icon{
-  position: absolute;
-  bottom: 50%;
-  width: 100%;
-  margin-left: -15%;
-  text-align: center;
-  color: #e7e497;
-  text-shadow: 0px 0px 10px #000000;
-}
-
-.card-icon i{
-  font-size: 3vw;
-}
-
-.card-text h1{
-  font-weight: bold;
-  font-size: 3vw;
-  text-shadow: 0px 0px 10px #000000;
-}
-
-.card-text h2{
-  font-weight: bold;
-  text-shadow: 0px 0px 10px #000000;
-  margin-top: -5%;
-  font-size: 1.5vw;
-}
-
-.portrait{
-  width: 25%;
-  position: absolute;
-  z-index: 20;
-}
-
-.header{
-  position: fixed;
-  top: -20px;
-  width: 100%;
-  height: 340px;
-  z-index: 101;
-  margin-top: 0px;
-  background: linear-gradient(180deg, var(--clear) 0%, var(--clear) 90%, rgba(168,255,138,0) 100%);
-}
-
-.header .col-8{
-  position: absolute;
-  right: 0px;
-  z-index: 0 !important;
-}
-
-.pt-30{
-  padding-top: 30px;
-}
-
-.main-content{
-  position: relative;
-  top: 280px;
-  z-index: 100;
-}
-
-a{
-  text-decoration: none;
-}
-
-.text-justify{
-  text-align: justify;
-}
-
-header{
-  padding: 30px 60px 0px 0px;
-  font-family: Barlow;
-  text-shadow: 0px 0px 10px #000000;
-}
-
-[class*="col-"]{
-	float: left;
-	width: 100%;
-}
-
-.text-right{
-  text-align: right;
-}
-
-header h1{
-  font-weight: 900;
-  font-size: 4vw;
-}
-
-.profile-container{
-  width: 100%;
-  padding: 20px;
-}
-
-.profile-container ul.nav-pills{
-  width: 100%;
-  padding-right: 3%;
-}
-
-.nav-pills li.nav-item{
-  float: left;
-  width: 25%;
-  padding: 20px;
-}
-
-.nav-pills li.nav-item .nav-link{
-  width: 100%;
-  background: radial-gradient(rgba(6,58,146,1) 0%, rgba(24,118,195,1) 50%, rgba(9,190,232,1) 100%);
-  color: white;
-  border-radius: 3px;
-  border: 3px solid white;
-  text-shadow: 0px 0px 4px #000000;
-  font-size: 2vw;
-  padding: 0px;
-  box-shadow: 0px 0px 4px #000000;
-  font-family: Barlow;
-}
-
-.nav-pills li.nav-item .nav-link.active{
-  background: radial-gradient(rgba(181,18,16,1) 0%, rgba(191,80,54,1) 50%, rgba(239,186,31,1) 100%);
-}
-
-#pills-tabContent.tab-content{
-  padding: 30px;
-}
-
-.profile-outer{
-  float: left;
-  position: relative;
-  width: 100%;
-}
-
-.profile-outer.t-55{
-  top: 55vh;
-}
-
-[class*="t-"]{
-  position: relative;
-}
-
-.profile-outer.t-30{
-  top: 30vh;
-}
-
-.profile-outer.t-45{
-  top: 45vh;
-}
-
-.profile-outer.t-69{
-  top: 69vh;
-}
-
-.profile-outer.t-175{
-  top: 175vh;
-}
-
-.profile-inner::before{
-  content:" ";
-  width: 0;
-  height: 0;
-  border-top: 10px solid var(--clear);
-  border-bottom: 10px solid transparent;
-  border-left:10px solid var(--clear);
-  position:absolute;
-  top:-9px;
-  left:0px;
-}
-
-.profile-inner::after{
-  content:" ";
-  width: 0;
-  height: 0;
-  border-top: 10px solid var(--clear);
-  border-bottom: 10px solid transparent;
-  border-right:10px solid var(--clear);
-  position:absolute;
-  top:-9px;
-  right:0px;
-}
-
-.profile-inner{
-  background-color: white;
-  position: relative;
-  width: 100%;
-  height: 10px;
-}
-
-.profile-inner__bottom{
-  background-color: white;
-  position: relative;
-  width: 20%;
-  height: 40px;
-  top: 10px;
-}
-
-.profile-inner__bottom::after{
-  content:" ";
-  width: 0;
-  height: 0;
-  border-bottom: 40px solid var(--gray);
-  border-top: 40px solid transparent;
-  border-right: 40px solid var(--gray);
-  position:absolute;
-  bottom:-40px;
-  right:0px;
-}
-
-.profile-item{
-  background: -webkit-linear-gradient(#9b9c9a, #000000);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-left: 20px;
-  font-size: 1.7vw;
-  font-weight: 600;
-  font-family: Barlow;
-  width: 15%;
-  top: 0px;
-  position: absolute;
-  text-align: center;
-}
-
-.profile-item-content{
-  background-color: #282c2f;
-  border: 1px solid white;
-  box-shadow: 0px 0px 10px #000000;
-  position: absolute;
-  top: 10px;
-  font-family: Barlow;
-}
-
-.profile-item-inner{
-  padding: 50px 30px 30px 30px;
-  text-shadow: 0px 0px 2px #000000;
-}
-
-[class*="profile-item-name"]{
-  font-weight: bold;
-}
-.profile-item-name__yellow{
-  color: yellow;
-}
-
-.profile-item-name__blue{
-  color: #90c8be;
-}
-
-.profile-item-name__center{
-  text-align: center;
-}
-
-.icon-container{
-  padding: 30px;
-}
-
-.language{
-  margin-top: 50%;
-  margin-bottom: 50%;
-}
-
-.progress{
-  background: linear-gradient(0deg, rgba(148,148,148,1) 0%, rgba(68,68,68,1) 70%, rgba(91,91,91,1) 100%);
-  border-radius: 0px;
-  height: 12px;
-  margin-top: 10px;
-}
-
-.progress-bar{
-  background: linear-gradient(0deg, rgba(168,255,138,1) 0%, rgba(59,171,53,1) 50%, rgba(74,204,61,1) 100%);
-}
-
-.pt-10{
-  padding-top: 10px;
-}
-
-.progress-50{
-  width: 50%;
-}
-
-.rating-container{
-  margin-top: 8px;
-}
-
-.rating:nth-child(1){
-  border-radius: 15px 0 0 15px;
-}
-
-.rating:nth-child(5){
-  border-radius: 0 15px 15px 0;
-}
-
-.rating{
-  box-shadow: 0px 0px 5px #000000;
-  display: inline-block;
-  border: 1px solid var(--gray);
-  width: 19%;
-  height: 30px;
-  background: linear-gradient(0deg, rgba(68,60,61,1) 46%, rgba(55,41,42,1) 54%);
-}
-
-.rating.active{
-  background: linear-gradient(0deg, rgba(161,79,38,1) 46%, rgba(204,105,55,1) 54%);
-}
-
-@media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 800px) {
 	/* For desktop: */
 	.col-1 {width: 8.33%;}
 	.col-2 {width: 16.66%;}
@@ -386,7 +49,7 @@ header h1{
 	.col-12 {width: 100%;}
 
   body{
-    padding: 15px;
+    padding: 0px;
   }
 }
 
