--- a/style/main.css
+++ b/style/main.css
@@ -216,6 +216,10 @@ ul.contact-items li{
   color: white;
 }
 
+.icon{
+  width: 100%;
+}
+
 .divider{
   border: 1px solid #242424;
 }
@@ -268,6 +272,33 @@ footer a .section-content{
   width: auto;
 }
 
+.triangle{
+  margin: -20px;
+  width: 0px;
+  height: 0px;
+  border-top: 70px solid #1b1b1b;
+  border-right: 70px solid transparent;
+  position: absolute;
+}
+
+.rank{
+  margin: -65px 5px 5px 5px;
+  width: 30px;
+  text-align: center;
+}
+
+.trophy{
+  width: 100%;
+  height: 100%;
+  margin: -10px 0px 0px -10px;
+  font-size: 20px;
+}
+
+.trophy i{
+  color: #fd9825;
+  position: absolute;
+}
+
 @media only screen and (min-width: 768px) {
 	/* For tablets: */
 	.col-1 {width: 8.33%;}
@@ -282,6 +313,59 @@ footer a .section-content{
 	.col-10 {width: 83.33%;}
 	.col-11 {width: 91.66%;}
 	.col-12 {width: 100%;}
+}
+
+.progress{
+  margin: 10px;
+  height: 6px;
+}
+
+.progress-bar{
+  height: 6px;
+}
+
+.bg-html{
+  background-color: #e34c26;
+}
+
+.bg-css{
+  background-color: #214ce5;
+}
+
+.bg-js{
+  background-color: #efd81d;
+}
+
+.bg-csharp{
+  background-color: #953dac;
+}
+
+.legends{
+  padding: 10px;
+}
+
+.legend{
+  width: 10px;
+  height: 10px;
+  border-radius: 5px;
+}
+
+.d-inline{
+  display: inline-block !important;
+}
+
+.skill{
+  background-color: #101010;
+  border: 1px solid #1b1b1b;
+  padding: 20px;
+}
+
+.text-right{
+  text-align: right;
+}
+
+.orange{
+  color: #ff9000;
 }
 
 @media only screen and (min-width: 992px) {
