Add new project DomBot

--- a/style/main.css
+++ b/style/main.css
@@ -358,6 +358,10 @@ footer a .section-content{
   background-color: #953dac;
 }
 
+.bg-python{
+  background-color: #F7E26D;
+}
+
 .legends{
   padding: 10px;
 }
